기본적인 퍼즐작동 구현완료(색상)

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,17 @@
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Vanilla Coding - Calendar</title>
-    </head>
-    <body>
-        <!-- HTML 마크업 시작 -->
+  <head>
+    <meta charset="utf-8">
+    <title>Color Puzzle</title>
+  </head>
+  <body>
+    <h3>순서 맞추기 게임<p>&#x1F601;</p></h3>
+  
+    <button id="startButton">시작하기</button>
+    
+    <ul id="board">
+      <li class=first id="firstBlock">Standard</li>
+    </ul>
 
-        <!-- 이 곳에 HTML 작업을 해주세요! -->
-        <h1>지금 몇시 몇분이에요?</h1>
-        <h2>몹시 흥분!</h2>
-        <!-- HTML 마크업 끝 -->
-    </body>
+    <button id="submitButton">제출하기</button>
+  </body>
 </html>
