채도, 명도, 색상 별 게임 진행 가능

--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,35 @@
     <title>Color Puzzle</title>
   </head>
   <body>
-    <h3>순서 맞추기 게임<p>&#x1F601;</p></h3>
+    <div id="title">
+      <h3>도전!</h3>
+      <h2>색채의 신</h2>
+    </div>
   
-    <button id="startButton">시작하기</button>
+    <div id="buttonGroup">
+      <div id="startButtonH">색상의 신</div>
+
+      <div id="startButtonB">명도의 신</div>
+  
+      <div id="startButtonS">채도의 신</div>
+    </div>
     
     <ul id="board">
       <li class=first id="firstBlock">Standard</li>
     </ul>
 
     <button id="submitButton">제출하기</button>
+
+    <div id="your">
+      <p>당신은</p>
+      <p class="class" id="yourHueClass"></p>
+      <p class="class" id="yourBrightnessClass"></p>
+      <p class="class" id="yourSaturationClass"></p>
+      <p>입니다.</p>
+    </div>
+
+    <div id="sideYou">
+      <p class="side" id="sideYourClass"></p>
+    </div>
   </body>
 </html>
