--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     <ul id="board">
       <li class=first id="firstBlock">Standard</li>
     </ul>
+    <div id="win"></div>
 
     <button id="submitButton">제출하기</button>
 
